# DORESM

./: .gitignore  CMakeLists.txt  README.md  main.cpp  style.h  uml_class_diagram.html
data/: credentials.txt
gui/: DormAdminPages.cpp  DormAdminPages.h  DormAdminWindow.cpp  DormAdminWindow.h  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  StaffPages.cpp  StaffPages.h  StaffWindow.cpp  StaffWindow.h  StudentPages.cpp  StudentPages.h  StudentWindow.cpp  StudentWindow.h  Validation.h  pages.cpp  pages.h  widgets.cpp  widgets.h
model/: Activity.cpp  Activity.h  Common.cpp  Common.h  Dormitory.cpp  Dormitory.h  HealthClinic.cpp  HealthClinic.h  MealBooking.h  Menu.h  Person.h  Restaurant.h  Room.cpp  Room.h  Student.cpp  Student.h  University.cpp  University.h  WeeklyMenu.h
