cmake_minimum_required(VERSION 3.16)
project(udrms LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

# Prefer Qt6, fall back to Qt5.
find_package(Qt6 COMPONENTS Widgets QUIET)
if (NOT Qt6_FOUND)
    find_package(Qt5 5.15 REQUIRED COMPONENTS Widgets)
endif()


add_executable(udrms WIN32
    main.cpp
    model/Common.cpp
    model/Student.cpp
    model/Room.cpp
    model/Dormitory.cpp
    model/Activity.cpp
    model/HealthClinic.cpp
    model/University.cpp
    gui/widgets.cpp
    gui/pages.cpp
    gui/MainWindow.cpp
)

target_include_directories(udrms PRIVATE ${CMAKE_SOURCE_DIR})

if (Qt6_FOUND)
    target_link_libraries(udrms PRIVATE Qt6::Widgets)
else()
    target_link_libraries(udrms PRIVATE Qt5::Widgets)
endif()